tests/testcases/errors/BCE0067-2.boo
"""
BCE0067-2.boo(5,1): BCE0067: There is already a local variable with the name 'a'.
"""
a = 3
a as int, b as int = 4, 5
